# rabbitmq_manager

./: Cargo.toml
manager/: Cargo.toml  r2d2_notes.txt
manager/src/: lib.rs
manager_lib_tester/: Cargo.toml
manager_lib_tester/src/: main.rs
