[package]
name = "manager"
version = "0.1.11"
authors = ["kumarmo2 <mohitkumar1015795@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r2d2 = "0.8.8"
lapin = "0.39.7"
serde = "1.0.106"
serde_json = "1.0"
smol = "0.1.2"