[package]
name = "manager_lib_tester"
version = "0.1.0"
authors = ["kumarmo2 <mohitkumar1015795@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
manager = { path = "../manager" }
serde = "1.0.106"
futures = { version = "0.3.4", default-features = false, features = ["std"] }
chat_common_types = {git = "https://github.com/kumarmo2/chat_common_types.git", branch = "master"}
smol = "0.1.4"
num_cpus = "1.13.0"